# Travel_Planner_GenAI_Hackathon_2025

./: LICENSE  README.md
hotel_mcp/: Dockerfile  hotels_with_details.json  pyproject.toml  server copy.py  server.py  test.py  test1.py
main_agent/: .env.yaml  Dockerfile
main_agent/fastapi_sessions/: main.py
main_agent/main_agent/: .env  agent.py  prompt.py
main_agent/main_agent/sub_agents/booking_and_payment/: agent.py  prompt.py
main_agent/main_agent/sub_agents/hotel_booking/: prompt.py
main_agent/main_agent/sub_agents/itinery_extract/: agent.py  prompt.py
main_agent/main_agent/sub_agents/welcome/: agent.py
main_agent_parent/: Dockerfile
main_agent_parent/fastapi_sessions/: main.py
main_agent_parent/main_agent/: agent.py  prompt.py
main_agent_parent/main_agent/sub_agents/hotel_booking/: agent.py  prompt.py
main_agent_parent/main_agent/sub_agents/itinery_extract/: agent.py  prompt.py
main_agent_parent/main_agent/sub_agents/welcome/: agent.py  prompt.py
trip_planner_website/: .firebaserc  firestore.rules  index.php
trip_planner_website/public/: booking.html  history.html  index.html
