[project]
name = "mcp-on-cloudrun"
version = "0.1.0"
description = "Personalized Trip Planner with AI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp==2.11.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-mcp>=0.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
